# cell-life

./: .editorconfig  Cargo.toml  cell-life.ngfx-proj
src/: app.rs  ecs.rs  main.rs  model.rs  particles.rs  rand.rs  renderer.rs  simulation.rs  utils.rs  window.rs
src/render/: array_buffer.rs  buffer.rs  context.rs  mod.rs  obj_provider.rs  renderer.rs  shader.rs  uniform.rs  vertex_model.rs
src/render/layers/: dots.rs  mod.rs  particles.rs
src/render/layers/shaders/: dots.frag.glsl  dots.vert.glsl  particles.frag.glsl  particles.vert.glsl
src/shaders/: test.frag.glsl  test.vert.glsl
src/sim/: cell.rs  mod.rs  receptor.rs  simulation.rs
src/sim/receptors/: attract.rs  base.rs  mod.rs
