[package]
name = "cell-life"
version = "0.1.0"
edition = "2021"

[dependencies]
crevice = { version = "0.12.0", features = ["glam"] }
glam = "0.22.0"
glow = { version = "0.12.0", features = ["debug_automatic_glGetError"] }
glutin = "0.30.3"
glutin-winit = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.5.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
winit = "0.28.1"
